syntax = "proto3";

package api.v1.database;

import "google/protobuf/timestamp.proto";

message Update {
  oneof field {
    string name = 1;
  }
}

enum Type {
  TYPE_UNSPECIFIED = 0;
  TYPE_MONGO = 1;
  TYPE_POSTGRES = 2;
}

message Table {
  string name = 1;
}

message Credential {
  string client_id = 1;
  string secret = 2;
  string name = 3;
  google.protobuf.Timestamp created_at = 4;
}

message Info {
  repeated Credential credentials = 1;
  google.protobuf.Timestamp created_at = 2;
  repeated Table tables = 3;
}

message Database {
  string database_id = 1;
  string name = 2;  // unique
  Type type = 3;
  Info info = 4;
}
